# xml_converter_app

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: colors_id_intertop.csv  colors_intimo.csv  name_rzid.csv  name_rzid_kasta.csv  sizes_id_intertop.csv
output/: exported_catalog.xml  rozetka_intimo.xml
schemas/: data_schema.py  validate.xsd  validate_intimo.xsd  validate_kasta.xsd
src/: config.py  exporters.py  logger_config.py  parser.py
src/exporters/: __init__.py  base.py  intertop.py  intimo.py  kasta.py
src/schemas/: data_schema.py  validate_intimo.xsd  validate_kasta.xsd
src/senders/: intertop.py
src/validators/: xsd_validator.py
validators/: xsd_validator.py
