[project]
name = "work"
version = "0.1.0"
description = ""
authors = [
    {name = "ink404dot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "xmlschema (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
