[project]
name = "work"
version = "0.1.0"
description = ""
authors = [
    {name = "ink404dot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "xmlschema (>=4.2.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
